# AI-Architect-Playground

./: README.md
projects/perfagent-ai/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  SKILLS.md  docker-compose.yml  pyproject.toml
projects/perfagent-ai/docs/: capacity-and-profiling.md  ci-integration.md  continuous-performance.md  demo-applications.md  demo-test-plan.md  dependency-analysis.md  ebpf-profiling.md  faq.md  observability-integrations.md  performance-validation-questionnaire.md  production-traffic-profile.md  profiling-flamegraph-backlog.md  prometheus-integration.md  storage-architecture.md
projects/perfagent-ai/examples/: prometheus-queries.yaml  sample-config.yaml  sample-openapi.yaml
projects/perfagent-ai/perfagent/: __main__.py  cli.py  config.py  mcp_server.py  workflow.py  workflow_graph.py
projects/perfagent-ai/tests/: test_alignment.py  test_bottleneck_rules.py  test_capacity_search.py  test_ci_comment.py  test_cli_planners.py  test_cli_workspace.py  test_config_engine_baseline.py  test_dependency_analysis.py  test_distributed_plan.py  test_distributed_results.py  test_external_results_import.py  test_feature_extraction.py  test_grpc_payments_api.py  test_jmeter_generator.py  test_k6_collector.py  test_k6_generator.py  test_locust_generator.py  test_makefile_targets.py  test_mcp_server.py  test_observability_adapters.py  test_ollama_llm.py  test_openapi_parser.py  test_postgres_store.py  test_pr_complexity.py  test_profile_phase_correlation.py  test_profiling.py  test_prometheus_collector.py  test_protocol_analysis.py  (+19 more)
(+350 files in other folders)
