[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perfagent-ai"
version = "0.1.0"
description = "Agentic performance evaluation CLI from OpenAPI contract to performance report."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "PyYAML>=6.0",
  "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "grpcio>=1.76.0",
  "grpcio-tools>=1.76.0",
  "websockets>=15.0.1",
]
postgres = [
  "psycopg[binary]>=3.2",
]
browser = [
  "playwright>=1.45",
]
graph = [
  "langgraph>=0.2.0",
]

[project.scripts]
perfagent = "perfagent.cli:main"

[tool.setuptools.packages.find]
include = ["perfagent*"]
